tests/error/tracing_errors/comptime_flags_nested_triple.err
Error: Unitary constraint violation (at $FILE:17:16)
   | 
15 |         with control(ctrl):
16 |             with power(2):
17 |                 foo(q)
   |                 ^^^^^^ This function cannot be called in a unitary context

Help: Consider adding the flag `(unitary=True)` to the decorator of the function
`foo`

Guppy compilation failed due to 1 previous error
